--- a/app/src/main/res/layout/fragment_blue.xml
+++ b/app/src/main/res/layout/fragment_blue.xml
@@ -8,17 +8,28 @@
     tools:context=".BlueFragment">
 
     <!-- TODO: Update blank fragment layout -->
+
     <TextView
         android:id="@+id/blue_fragment_text_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="#2D3C8E"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="@string/hello_blank_fragment"
-        android:textColor="#FFFFFF"
-        android:textSize="22sp"
+        android:textColor="#F9F5F5"
+        android:textColorLink="#DDF6F2F2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/blue_fragment_back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:text="Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/blue_fragment_text_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
